Drag and Drog File
Drag and Drog File

--- a/03_dragAndDropFile/index.html
+++ b/03_dragAndDropFile/index.html
@@ -11,9 +11,8 @@
 </head>
 
 <body>
+  <p id="dropzone">Drag your file here</p>
   <script src="sketch.js"></script>
-  <h2>Load File</h2>
-  <button id="loadfile">Load File</button>
 </body>
 
 </html>
