--- a/02_loadFile/index.html
+++ b/02_loadFile/index.html
@@ -5,15 +5,14 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/p5.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/addons/p5.dom.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/addons/p5.sound.min.js"></script>
-  <link rel="stylesheet" type="text/css" href="style.css">
   <meta charset="utf-8" />
 
 </head>
 
 <body>
   <script src="sketch.js"></script>
-  <h2>Load File</h2>
-  <button id="loadfile">Load File</button>
+  <h2>Load Text File</h2>
+
 </body>
 
 </html>
